--- a/index.html
+++ b/index.html
@@ -368,6 +368,9 @@ href="https://www.google.ca/">google</a> all the time to do data
 science.</p>
 <p>This is my landlady’s cat Grisou who is super adorable.</p>
 <p><img src="images/Grisou.JPG" /></p>
+<p>We can try to use html code to format the image instead of using rmd
+language.</p>
+<p><img src="images/Grisou.JPG" style="width:25%"></p>
 <pre class="r"><code>library(tidyverse)</code></pre>
 <pre><code>## ── Attaching packages ─────────────────────────────────────── tidyverse 1.3.2 ──
 ## ✔ ggplot2 3.3.6     ✔ purrr   0.3.4
@@ -379,7 +382,7 @@ science.</p>
 ## ✖ dplyr::lag()    masks stats::lag()</code></pre>
 <pre class="r"><code>sample = rnorm(1000)
 mean(sample)</code></pre>
-<pre><code>## [1] -0.01338732</code></pre>
+<pre><code>## [1] -0.03207498</code></pre>
 <p>Here’s a direct link to the about page: <a
 href="about.html">about</a>.</p>
 <p>I also made a bonus <a href="extra_page.html">extra page</a>.</p>
