--- a/index.html
+++ b/index.html
@@ -370,22 +370,28 @@ science.</p>
 <p><img src="images/Grisou.JPG" /></p>
 <p>We can try to use html code to format the image instead of using rmd
 language.</p>
-<p><img src="images/Grisou.JPG" style="width:25%"></p>
+<center>
+<img src="images/Grisou.JPG" style="width:25%">
+</center>
 <pre class="r"><code>library(tidyverse)</code></pre>
 <pre><code>## ── Attaching packages ─────────────────────────────────────── tidyverse 1.3.2 ──
-## ✔ ggplot2 3.3.6     ✔ purrr   0.3.4
-## ✔ tibble  3.1.7     ✔ dplyr   1.0.9
-## ✔ tidyr   1.2.0     ✔ stringr 1.4.0
+## ✔ ggplot2 3.3.6     ✔ purrr   0.3.5
+## ✔ tibble  3.1.8     ✔ dplyr   1.0.9
+## ✔ tidyr   1.2.0     ✔ stringr 1.4.1
 ## ✔ readr   2.1.2     ✔ forcats 0.5.1
 ## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
 ## ✖ dplyr::filter() masks stats::filter()
 ## ✖ dplyr::lag()    masks stats::lag()</code></pre>
 <pre class="r"><code>sample = rnorm(1000)
 mean(sample)</code></pre>
-<pre><code>## [1] 0.01994613</code></pre>
+<pre><code>## [1] -0.02527109</code></pre>
 <p>Here’s a direct link to the about page: <a
 href="about.html">about</a>.</p>
 <p>I also made a bonus <a href="extra_page.html">extra page</a>.</p>
+<div id="new-section" class="section level2">
+<h2>New Section!!</h2>
+<p><a href="plotly.html">Here’s</a> a page with plotly plots.</p>
+</div>
 </div>
 
 
